--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ SQLAlchemy = "^1.4.45"
 alembic = "^1.9.0"
 asyncpg = "^0.27.0"
 psycopg2-binary = "^2.9.5"
+bcrypt = "^4.0.1"
+PyJWT = "^2.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
