--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,15 @@ asyncpg = "^0.27.0"
 psycopg2-binary = "^2.9.5"
 bcrypt = "^4.0.1"
 PyJWT = "^2.6.0"
+pytest = "^7.2.0"
+httpx = "^0.23.1"
+pytest-asyncio = "^0.20.3"
+asgi-lifespan = "^2.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^23.1a1", allow-prereleases = true}
+
 
 [build-system]
 requires = ["poetry-core"]
